changed class of icon-search (basket)

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ a {
 h2,
 h3,
 p {
-margin: 0;
+  margin: 0;
 }
 
 img {
@@ -64,15 +64,15 @@ img {
   margin-bottom: 40px;
 
   font-size: 30px;
-line-height: calc(40/30);
+  line-height: calc(40 / 30);
 
-  color: var(--main-text-color);   
+  color: var(--main-text-color);
 }
 
-@media screen and (min-width:1320px) {
-  .section-title{
-  font-size: 40px;
-  line-height: calc(48/40);
+@media screen and (min-width: 1320px) {
+  .section-title {
+    font-size: 40px;
+    line-height: calc(48 / 40);
   }
 }
 
@@ -135,7 +135,7 @@ line-height: calc(40/30);
   margin-bottom: 30px;
 }
 
-.header-container{
+.header-container {
   position: relative;
 }
 
@@ -144,8 +144,8 @@ line-height: calc(40/30);
   align-items: baseline;
 }
 
-@media screen and (max-width:1320px) {
-  .about-help{
+@media screen and (max-width: 1319px) {
+  .about-help {
     display: none;
   }
 }
@@ -161,8 +161,8 @@ line-height: calc(40/30);
   cursor: pointer;
 }
 
-@media screen and (min-width:1320px) {
-  .burger-button{
+@media screen and (min-width: 1320px) {
+  .burger-button {
     display: none;
   }
 }
@@ -253,46 +253,46 @@ line-height: calc(40/30);
   align-items: center;
 }
 
-@media screen and (max-width:1319px) {
- .header-middle{
-padding-top: 20px;
-padding-bottom: 10px;
-margin-bottom: 40px;
+@media screen and (max-width: 1319px) {
+  .header-middle {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
 
-       flex-wrap: wrap;
-       row-gap: 30px;
+    flex-wrap: wrap;
+    row-gap: 30px;
   }
 }
 
-.header-middle::after{
+.header-middle::after {
   position: absolute;
-  top:90px;
+  top: 90px;
   left: 0;
 
   content: " ";
-  
+
   display: block;
   width: 100%;
   height: 2px;
-  background-color:#F8F8F8;
+  background-color: #f8f8f8;
   background-color: red;
 }
 
 .header-middle > .link-header {
-margin-left: auto;
+  margin-left: auto;
 
   display: block;
-  
+
   width: 215px;
   height: 36px;
 }
 
-@media screen and (min-width:1320px) {
-.header-middle > .link-header{
-       margin-right: 34px;
+@media screen and (min-width: 1320px) {
+  .header-middle > .link-header {
+    margin-right: 34px;
 
-        width: 250px;
-  height: 50px;
+    width: 250px;
+    height: 50px;
   }
 }
 
@@ -301,29 +301,29 @@ margin-left: auto;
   height: 100%;
 }
 
-.button-mainFeedback{
+.button-mainFeedback {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
 }
 
-.button-mobile{
- margin-left: auto;
+.button-mobile {
+  margin-left: auto;
 }
 
-@media screen and (min-width:1320px) {
-.button-mobile{
- display: none;
-}
+@media screen and (min-width: 1320px) {
+  .button-mobile {
+    display: none;
+  }
 }
 
-.button-mobile>.icon-phone{
+.button-mobile > .icon-phone {
   width: 100%;
   height: 100%;
   fill: #535353;
 }
 
-.button-mobile:hover >.icon-phone{
+.button-mobile:hover > .icon-phone {
   fill: var(--accent-color);
   stroke-width: var(--accent-color);
 }
@@ -336,8 +336,8 @@ margin-left: auto;
   border: none;
 }
 
-@media screen and (min-width:1320px) {
-  .catalog{
+@media screen and (min-width: 1320px) {
+  .catalog {
     margin-right: 30px;
   }
 }
@@ -357,9 +357,9 @@ margin-left: auto;
   margin-right: 30px;
 }
 
-@media screen and (max-width:1319px) {
-.form-search{
-   display: none;
+@media screen and (max-width: 1319px) {
+  .form-search {
+    display: none;
   }
 }
 
@@ -426,8 +426,8 @@ margin-left: auto;
   background-color: var(--white-text-color);
 }
 
-@media screen and (max-width:1319px) {
-  .main-feedback{
+@media screen and (max-width: 1319px) {
+  .main-feedback {
     display: none;
   }
 }
@@ -517,7 +517,7 @@ margin-left: auto;
   gap: 20px;
 }
 
-.obrane-korzina {
+.obrane {
   padding: 0;
   border: none;
   background-color: transparent;
@@ -528,8 +528,8 @@ margin-left: auto;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.obrane-korzina:hover,
-.obrane-korzina:focus {
+.obrane:hover,
+.obrane:focus {
   color: var(--accent-color);
 }
 
@@ -539,14 +539,20 @@ margin-left: auto;
   fill: currentColor;
 }
 
+@media screen and (min-width: 1320px) {
+  .header-buttons > .basket {
+    display: none;
+  }
+}
+
 .list-wrapper {
   display: flex;
 }
 
-@media screen and (max-width:1319px) {
-    .list-wrapper{
-        display: none;
-    }
+@media screen and (max-width: 1319px) {
+  .list-wrapper {
+    display: none;
+  }
 }
 
 .icons-list {
@@ -626,15 +632,15 @@ margin-left: auto;
 }
 
 /* СТИЛІ ДЛЯ "ГЕРОЙ" */
-.section.slider{
+.section.slider {
   margin-bottom: 60px;
 }
 
-.wrapper-slider{
+.wrapper-slider {
   position: relative;
 }
 
-.icon-slider{
+.icon-slider {
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -642,14 +648,14 @@ margin-left: auto;
   background-color: pink;
 }
 
-@media screen and (min-width:1320px) {
-  .icon-slider{
+@media screen and (min-width: 1320px) {
+  .icon-slider {
     display: none;
   }
 }
 
 /* СТИЛІ ДЛЯ "ПОПУЛЯРНІ КАТЕГОРІЇ" */
-.popular-categories{
+.popular-categories {
   margin-bottom: 80px;
 }
 
@@ -659,8 +665,8 @@ margin-left: auto;
   gap: 10px;
 }
 
-@media screen and (min-width:1320px) {
-  .popular-categories .list-categories{
+@media screen and (min-width: 1320px) {
+  .popular-categories .list-categories {
     row-gap: 24px;
   }
 }
@@ -682,9 +688,9 @@ margin-left: auto;
   background-position: bottom;
 }
 
-@media screen and (min-width:1320px) {
-  .item-categories{
-      width: calc((100% - 40px) / 5);
+@media screen and (min-width: 1320px) {
+  .item-categories {
+    width: calc((100% - 40px) / 5);
   }
 }
 
@@ -701,14 +707,14 @@ margin-left: auto;
   top: 15px;
 
   font-size: 19px;
-    line-height: calc(24/19);
+  line-height: calc(24 / 19);
 }
 
-@media screen and (min-width:1320px) {
+@media screen and (min-width: 1320px) {
   .popular-categories .description {
-  top: 20px;
+    top: 20px;
 
-      font-size: 18px;
+    font-size: 18px;
   }
 }
 
@@ -717,16 +723,16 @@ margin-left: auto;
   color: var(--main-text-color);
 }
 
-@media screen and (min-width:1320px) {
-  .popular-categories .title-descr{
-  left: 20px;
+@media screen and (min-width: 1320px) {
+  .popular-categories .title-descr {
+    left: 20px;
   }
 }
 
-.furniture-walls{
-    display: block;
+.furniture-walls {
+  display: block;
 
-    color: #c0b0b0;
+  color: #c0b0b0;
 }
 
 .popular-categories .amount {
@@ -734,9 +740,9 @@ margin-left: auto;
   color: #b1b1b1;
 }
 
-@media screen and (min-width:1320px) {
-  .popular-categories .amount{
-  right: 20px;
+@media screen and (min-width: 1320px) {
+  .popular-categories .amount {
+    right: 20px;
   }
 }
 
@@ -754,13 +760,13 @@ margin-left: auto;
   color: transparent;
 }
 
-@media screen and (min-width:1320px) {
-  .link-categories{
- bottom: 20px;
-  right: 20px;
+@media screen and (min-width: 1320px) {
+  .link-categories {
+    bottom: 20px;
+    right: 20px;
 
-     width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
   }
 }
 
