--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,26 @@ img {
   margin-bottom: 30px;
 }
 
+.header::after {
+  position: absolute;
+  bottom: 70px;
+  left: 0;
+
+  content: " ";
+
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #f8f8f8;
+  background-color: red;
+}
+
+@media screen and (min-width:1320px) {
+  .header::after{
+    bottom: 60px;
+  }
+}
+
 .header-container {
   position: relative;
 }
@@ -262,20 +282,6 @@ img {
     flex-wrap: wrap;
     row-gap: 30px;
   }
-}
-
-.header-middle::after {
-  position: absolute;
-  top: 90px;
-  left: 0;
-
-  content: " ";
-
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: #f8f8f8;
-  background-color: red;
 }
 
 .header-middle > .link-header {
