--- a/css/styles.css
+++ b/css/styles.css
@@ -103,12 +103,18 @@ img {
 
 .no-margin {
   margin-bottom: 0;
-  margin-right: 30px;
 }
 
 .icon-large {
-  width: 50px;
+  width: 70px;
+  height: 70px;
+}
+
+@media screen and (min-width:1320px) {
+  .icon-large{
+    width: 50px;
   height: 50px;
+  }
 }
 
 .icon-small {
@@ -817,6 +823,12 @@ position: relative;
   color: var(--accent-color);
 }
 
+@media screen and (max-width:1319px) {
+  .view-all{
+    display: none;
+  }
+}
+
 .icon-all {
   margin-left: 10px;
 }
@@ -841,15 +853,13 @@ position: relative;
 
 .item-products {
   padding: 20px;
-  width: 300px;
+  /* width: 300px; */
   margin: 15px;
-  /* margin-right: 30px;
-    margin-bottom: 30px; */
-
-  /* border: 1px solid #E3E2E2; */
+ 
+  border: 1px solid #E3E2E2;
   border-radius: 8px;
-  border: 1px solid #e3e2e2;
   background-color: var(--white-text-color);
+  background-color:  rgb(244 202 202);
   box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
 
@@ -862,40 +872,58 @@ position: relative;
 } */
 
 .product-card {
+  margin-bottom: 20px;
+  
   display: block;
+}
+
+.product-information{
   margin-bottom: 20px;
 }
 
 .popular-products .size {
-  margin-top: 0;
   margin-bottom: 10px;
-  font-size: 13px;
+
+font-size: 15px;
   font-weight: 300;
-  line-height: 1.69;
+  line-height: calc(22/15);
 
   color: var(--secondary-etxt-color);
 }
 
-.link-title {
-  margin-top: 0;
+@media screen and (min-width:1320px) {
+  .popular-products .size {
+  font-size: 13px;
+  }
+}
+
+.link-title{
+display: block;
+
   margin-bottom: 10px;
-  font-size: 17px;
-  /* font-weight: 600; */
-  line-height: 1.53;
+}
+
+.sub-title {
+  font-size: 20px;
+  line-height: calc(28/20);
 
   color: var(--main-text-color);
 }
 
-.link-title.add-height {
+@media screen and (min-width:1320px) {
+  .sub-title{
+  font-size: 17px;
+  }
+}
+
+.sub-title.add-height {
   line-height: 3.06;
 }
 
 .in-stock {
-  margin-top: 0;
-  margin-bottom: 20px;
   font-size: 13px;
   font-weight: 300;
-  line-height: 1.7;
+  line-height: calc(22/13);
   color: var(--main-text-color);
 }
 
@@ -910,21 +938,17 @@ position: relative;
 }
 
 .past-price {
-  margin-top: 0;
-  margin-bottom: 0;
+  font-weight: 400;
   font-size: 15px;
-  line-height: 1.46;
+  line-height: calc(22/15);
   text-decoration-line: line-through;
 
   color: #e03d3d;
 }
 
 .current-price {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 20px;
-  /* font-weight: 600; */
-  /* line-height: 1.4; */
+   font-size: 20px;
+  line-height: calc(34/26);
 
   color: var(--main-text-color);
 }
