added border-radius, overflow-hidden to product-card

--- a/css/styles.css
+++ b/css/styles.css
@@ -875,6 +875,9 @@ position: relative;
   margin-bottom: 20px;
   
   display: block;
+
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .product-information{
