added width for item-products (mobile layout) of 'popular-products'

--- a/css/styles.css
+++ b/css/styles.css
@@ -855,6 +855,8 @@ position: relative;
   padding: 20px;
   /* width: 300px; */
   margin: 15px;
+  
+  width: 410px;
  
   border: 1px solid #E3E2E2;
   border-radius: 8px;
