--- a/css/styles.css
+++ b/css/styles.css
@@ -846,9 +846,11 @@ position: relative;
 }
 
 .popular-products .list-products {
+  margin: -15px;
+  margin-bottom: 15px;
+
   display: flex;
   flex-wrap: wrap;
-  margin: -15px;
 }
 
 .item-products {
@@ -872,6 +874,10 @@ position: relative;
 /* .item-products:nth-last-child(-n + 4) {
     margin-bottom: 0;
 } */
+
+.item-products:nth-last-child(-n+2){
+  display: none;
+}
 
 .product-card {
   margin-bottom: 20px;
@@ -1001,6 +1007,26 @@ display: block;
   width: 100%;
   height: 100%;
   fill: currentColor;
+}
+
+.button-products{
+  padding: 13px 20px;
+
+  width: 100%;
+  
+  font-size: 19px;
+  font-weight: 600;
+  line-height: calc(24/19);
+      
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+  
+  color: #FFF;
+    border-radius: 8px;
+    border: none;
+    background-color: #FFBC57;
 }
 
 /* СТИЛІ ДЛЯ "АКЦІЇ" */
