--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ img {
 
 @media screen and (max-width: 1319px) {
   .section-title {
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
   }
 }
 
@@ -103,10 +103,6 @@ img {
   border: 1px solid var(--accent-color);
   color: var(--accent-color);
   background-color: var(--white-text-color);
-}
-
-.no-margin {
-  margin-bottom: 0;
 }
 
 .icon-large {
@@ -833,12 +829,6 @@ margin-bottom: 40px;
   line-height: calc(24/19);
 
   color: var(--accent-color);
-}
-
-@media screen and (max-width: 1319px) {
-  .view-all {
-    display: none;
-  }
 }
 
 .articles-news .wrapper-arrow {
