--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,17 @@ a {
   text-decoration: none;
 }
 
+h1,
 h2,
 h3,
 p {
   margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 600;
 }
 
 img {
@@ -742,6 +749,7 @@ img {
 
 .popular-categories .title-descr {
   left: 15px;
+
   color: var(--main-text-color);
 }
 
@@ -1096,45 +1104,66 @@ img {
   }
 }
 
-.shares .icon-mob {
+.icon-mob {
   margin-right: auto;
   margin-left: auto;
 
+  display: block;
+
   width: 115px;
   height: 15px;
-
-  display: block;
 }
 
 @media screen and (min-width: 1320px) {
-  .shares .icon-mob {
+  .icon-mob {
     display: none;
   }
 }
 
 /* СТИЛІ ДЛЯ "ОСТАННІ ВІДГУКИ" */
 .last-reviews {
-  padding-top: 70px;
-  padding-bottom: 50px;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1920px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
   background-color: #e9e9e9;
 }
 
-.last-reviews > .wrapper-reviews {
-  display: flex;
+@media screen and (min-width:1320px) {
+  .last-reviews{
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .last-reviews > .wrapper-reviews {
+    display: flex;
+  }
+}
+
+.wrapper-logo-rating {
+  margin-bottom: 40px;
+}
+
+.last-reviews .section-title {
+  margin-bottom: 40px;
+
+  font-size: 40px;
+  line-height: calc(48 / 40);
 }
 
 .last-reviews .logo-rating {
+  margin-bottom: 40px;
+
   display: flex;
+  gap: 30px;
 }
 
 .logo-rating > .logo-link {
-  margin-right: 30px;
   width: 80px;
   height: 80px;
+
+  flex-shrink: 0;
 }
 
 .logo-rating .logo-reviews {
@@ -1143,16 +1172,14 @@ img {
 }
 
 .wrapper-rating {
-  margin-bottom: 40px;
   max-width: 300px;
 }
 
 .title-rating {
-  font-size: 20px;
-  margin-top: 0;
   margin-bottom: 10px;
-  /* font-weight: 600; */
-  /* line-height: 1.4; */
+
+  font-size: 20px;
+  line-height: calc(28 / 20);
 
   color: var(--main-text-color);
 }
@@ -1160,52 +1187,58 @@ img {
 .rating-icon {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .rating {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 10px;
   font-size: 19px;
-  line-height: 1.26;
+  line-height: calc(24 / 19);
+
   color: var(--accent-color);
 }
 
 .count-rating {
-  margin-top: 0;
-  margin-bottom: 0;
   font-size: 13px;
   font-weight: 300;
-  line-height: 1.69;
+  line-height: calc(22 / 13);
 
   color: var(--secondary-etxt-color);
 }
 
 .write-review {
-  padding: 13px 11px;
-  margin-right: 5px;
+  padding: 13px 14px;
+
   min-width: 210px;
+
+  font-size: 17px;
+  line-height: calc(24 / 19);
+
+  border: none;
 }
 
 .icon-review {
   fill: currentColor;
-  margin-right: 15px;
+  margin-right: 8px;
 }
 
 .all-reviews {
   padding: 13px 11px;
+
   font-size: 19px;
-  /* font-weight: 600; */
-  line-height: 1.3;
+  line-height: calc(24 / 19);
   display: inline-flex;
   align-items: center;
 
   color: var(--secondary-etxt-color);
-  border-radius: 8px;
-  border: 1px solid transparent;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width:1319px) {
+  .all-reviews {
+  margin-left: 30px;
+  }
 }
 
 .all-reviews:hover,
@@ -1215,7 +1248,8 @@ img {
 }
 
 .icon-reviews {
-  margin-right: 15px;
+  margin-right: 8px;
+
   fill: currentColor;
 }
 
@@ -1224,9 +1258,16 @@ img {
   gap: 20px;
 }
 
+@media screen and (max-width: 1319px) {
+  .list-reviews {
+    margin-bottom: 30px;
+  }
+}
+
 .item-reviews {
-  padding: 30px;
-  width: 430px;
+  padding: 19px 20px;
+
+  width: 410px;
 
   border-radius: 8px;
   border: 1px solid #e3e2e2;
@@ -1234,9 +1275,19 @@ img {
   box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
 
-/* .item-reviews:not(:last-child) {
-    margin-right: 30px;
-} */
+@media screen and (max-width: 1319px) {
+  .item-reviews:last-child {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .item-reviews {
+    padding: 30px;
+
+    width: 450px;
+  }
+}
 
 .item-reviews > .name-date {
   display: flex;
@@ -1246,6 +1297,10 @@ img {
 .button-avatar {
   padding: 0;
   margin-right: 20px;
+
+  width: 50px;
+  height: 50px;
+
   border: none;
 
   cursor: pointer;
@@ -1260,11 +1315,11 @@ img {
 }
 
 .name-reviews {
-  margin-bottom: 0;
-  margin-top: 0;
+  margin-bottom: 2px;
+
   font-size: 17px;
   font-weight: 400;
-  line-height: 1.41;
+  line-height: calc(24 / 17);
 
   color: var(--main-text-color);
 }
@@ -1274,12 +1329,13 @@ img {
 }
 
 .descr-reviews {
-  margin-top: 0;
   margin-bottom: 30px;
-  min-width: 370px;
+
+  min-width: 354px;
   max-height: 150px;
+
   font-weight: 400;
-  line-height: 1.87;
+  line-height: calc(30 / 16);
 
   overflow: auto;
 
@@ -1290,21 +1346,16 @@ img {
   font-size: 18px;
   display: flex;
   align-items: center;
-  /* font-weight: 600; */
-  /* line-height: 1.4; */
+  gap: 10px;
 
   color: var(--secondary-etxt-color);
 }
 
-.img-tovar {
-  margin-right: 10px;
-}
-
 .date-reviews {
-  margin-top: 0;
-  margin-bottom: 0;
   margin-left: auto;
+
   font-weight: 400;
+  line-height: calc(24 / 17);
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
@@ -1389,9 +1440,10 @@ img {
 }
 
 .wrapper-description {
-  max-width: 1070px;
   margin-left: auto;
   margin-right: auto;
+
+  max-width: 1070px;
 }
 
 .about .after-title {
