--- a/css/styles.css
+++ b/css/styles.css
@@ -824,7 +824,7 @@ img {
 }
 
 .view-all {
-    font-size: 19px;
+  font-size: 19px;
 
   display: inline-flex;
   align-items: center;
@@ -835,20 +835,26 @@ img {
   color: var(--accent-color);
 }
 
-@media screen and (max-width:1319px) {
+@media screen and (max-width: 1319px) {
   .view-all {
     display: none;
   }
 }
 
 @media screen and (max-width:1319px) {
-  .articles-news .wrapper-arrow {
-  display: none;
+  .articles-news .title-wrapper{
+    margin-bottom: 23px;
   }
 }
 
 .articles-news .wrapper-arrow {
   margin-left: auto;
+}
+
+@media screen and (max-width: 1319px) {
+  .articles-news .wrapper-arrow {
+    display: none;
+  }
 }
 
 .button-news {
@@ -1076,8 +1082,8 @@ img {
   }
 }
 
-@media screen and (max-width:1319px) {
-  .shares .title-wrapper{
+@media screen and (max-width: 1319px) {
+  .shares .title-wrapper {
     display: flex;
   }
 }
@@ -1094,7 +1100,7 @@ img {
   }
 }
 
-.shares .view-all{
+.shares .view-all {
   display: inline-flex;
 }
 
@@ -1144,8 +1150,8 @@ img {
   background-color: #e9e9e9;
 }
 
-@media screen and (min-width:1320px) {
-  .last-reviews{
+@media screen and (min-width: 1320px) {
+  .last-reviews {
     padding-top: 70px;
     padding-bottom: 50px;
   }
@@ -1251,9 +1257,9 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width:1319px) {
+@media screen and (max-width: 1319px) {
   .all-reviews {
-  margin-left: 30px;
+    margin-left: 30px;
   }
 }
 
@@ -1410,8 +1416,8 @@ img {
   color: var(--accent-color);
 }
 
-@media screen and (max-width:1319px) {
-  .read-blog{
+@media screen and (max-width: 1319px) {
+  .read-blog {
     display: none;
   }
 }
