--- a/css/styles.css
+++ b/css/styles.css
@@ -841,8 +841,8 @@ img {
   }
 }
 
-@media screen and (max-width:1319px) {
-  .articles-news .title-wrapper{
+@media screen and (max-width: 1319px) {
+  .articles-news .title-wrapper {
     margin-bottom: 23px;
   }
 }
@@ -1381,13 +1381,14 @@ img {
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
-.list-articles {
-  display: flex;
+@media screen and(min-width:1320px) {
+  .list-articles {
+    display: flex;
+  }
 }
 
 .item-articles {
   width: 410px;
-  /* width: calc((100% - 60px) / 3); */
 
   border-radius: 8px;
   border: 1px solid #e3e2e2;
@@ -1398,8 +1399,16 @@ img {
   box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 }
 
-.item-articles + .item-articles {
-  margin-left: 30px;
+@media screen and (max-width: 1319px) {
+  .item-articles + .item-articles {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1320px) {
+  .item-articles + .item-articles {
+    margin-left: 30px;
+  }
 }
 
 .wrapper-img {
@@ -1423,10 +1432,7 @@ img {
 }
 
 .title-detail {
-  padding-left: 30px;
-  padding-top: 30px;
-  padding-right: 30px;
-  padding-bottom: 20px;
+padding: 30px 30px 20px 30px;
 
   /* border-left: 1px solid #e3e2e2;
     border-bottom: 1px solid #e3e2e2;
@@ -1434,28 +1440,24 @@ img {
 }
 
 .news-title {
-  margin-top: 0;
   margin-bottom: 30px;
+
   font-size: 26px;
-  /* font-weight: 600; */
-  line-height: 1.3;
+  line-height: calc(34/26);
 }
 
 .news-title.added-height {
-  line-height: 1.95;
+  line-height: calc(51/26);
 }
 
 .articles-news .link-detail {
+display: flex;
+gap: 10px;
+
   font-size: 19px;
-  /* font-weight: 600; */
-  line-height: 1.26;
+  line-height: calc(24/19);
 
   color: var(--accent-color);
-}
-
-.icon-detail {
-  margin-left: 10px;
-  vertical-align: middle;
 }
 
 /* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
