added link read-blog-mobile of articles-news for mob screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -1381,6 +1381,12 @@ img {
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
+@media screen and (max-width:1319px) {
+  .list-articles{
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and(min-width:1320px) {
   .list-articles {
     display: flex;
@@ -1392,6 +1398,7 @@ img {
 
   border-radius: 8px;
   border: 1px solid #e3e2e2;
+  border: 1px solid red;
   /* border-left: 1px solid #e3e2e2;
     border-bottom: 1px solid #e3e2e2;
     border-right: 1px solid #e3e2e2; */
@@ -1419,6 +1426,7 @@ img {
 .read-blog {
   font-size: 19px;
   line-height: 1.3;
+
   display: flex;
   align-items: center;
 
@@ -1427,7 +1435,7 @@ img {
 
 @media screen and (max-width: 1319px) {
   .read-blog {
-    display: none;
+ display: none;
   }
 }
 
@@ -1458,6 +1466,23 @@ gap: 10px;
   line-height: calc(24/19);
 
   color: var(--accent-color);
+}
+
+.read-blog-mobile{
+padding: 13px 20px;
+
+  font-size: 19px;
+line-height: calc(24/19);
+
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 15px;
+
+border-radius: 8px;
+
+color: var(--white-text-color);
+background-color: var(--accent-color);
 }
 
 /* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
