--- a/css/styles.css
+++ b/css/styles.css
@@ -50,9 +50,9 @@ img {
 }
 
 .container {
-  max-width: 440px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 480px;
+  padding-left: 35px;
+  padding-right: 35px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -60,6 +60,8 @@ img {
 @media screen and (min-width: 1320px) {
   .container {
     max-width: 1320px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -615,9 +617,10 @@ img {
   position: relative;
   padding-top: 18px;
   padding-bottom: 18px;
+
   display: block;
+
   font-size: 17px;
-  /* font-weight: 600; */
   line-height: 1.26;
 
   color: var(--secondary-etxt-color);
@@ -1365,8 +1368,8 @@ img {
 }
 
 /* СТИЛІ ДЛЯ "СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ" */
-@media screen and (max-width:1319px) {
-  .section.articles-news{
+@media screen and (max-width: 1319px) {
+  .section.articles-news {
     margin-bottom: 60px;
   }
 }
@@ -1498,52 +1501,90 @@ img {
 }
 
 /* СТИЛІ ДЛЯ "ПРО:ПЕРЕВАГИ" */
-.about {
+.about-benefit {
   padding-top: 40px;
   padding-bottom: 40px;
-  
+
   background-color: var(--white-text-color);
 }
 
-@media screen and (min-width:1320px) {
-  .about{
+@media screen and (min-width: 1320px) {
+  .about-benefit {
     padding-top: 70px;
-    }
+  }
 }
 
-.wrapper-description {
-  margin-left: auto;
-  margin-right: auto;
-
-  max-width: 1070px;
+@media screen and (max-width: 1319px) {
+  .about {
+    position: relative;
+  }
 }
 
-.about .after-title {
-  margin-top: 0;
-  margin-bottom: 30px;
-  font-size: 40px;
-  /* font-weight: 600; */
-  line-height: 1.2;
-  text-align: center;
+@media screen and (min-width: 1320px) {
+  .about {
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: 1070px;
+  }
+}
+
+.about-benefit .after-title {
+  margin-bottom: 40px;
+  font-size: 30px;
+  line-height: calc(40 / 30);
 
   color: var(--main-text-color);
+}
+
+@media screen and (min-width: 1320px) {
+  .about-benefit .after-title {
+    margin-bottom: 30px;
+
+    font-size: 40px;
+    line-height: calc(48 / 40);
+
+    text-align: center;
+  }
 }
 
 .about-text {
+  max-height: 280px;
+  overflow: hidden;
+
   font-weight: 400;
-  line-height: 1.87;
+  line-height: calc(30 / 16);
 
   color: var(--main-text-color);
 }
 
-.about-text.text-first {
-  margin-top: 0;
-  margin-bottom: 0;
+@media screen and (min-width: 1320px) {
+  .about-text > .indent-down {
+    margin-bottom: 10px;
+    display: block;
+  }
 }
 
-.about-text.text-second {
-  margin-bottom: 70px;
-  margin-top: 0;
+.about-shadow {
+position: absolute;
+bottom: 0;
+left: 0;
+
+  height: 145px;
+  width: 480px;
+
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+
+  background-image: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 33.85%,
+    #fff 72.4%
+  );
+
+  transform: translateX(-35px);
 }
 
 /* "ПЕРЕВАГИ" */
