--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,11 @@ img {
   height: auto;
 }
 
+.icon-arrow-top {
+  width: 24px;
+  height: 24px;
+}
+
 .container {
   max-width: 480px;
   padding-left: 35px;
@@ -1450,7 +1455,7 @@ img {
 
 .title-detail {
   padding: 30px 30px 20px 30px;
- }
+}
 
 .news-title {
   margin-bottom: 30px;
@@ -1675,20 +1680,52 @@ img {
   position: relative;
   padding-top: 40px;
   padding-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
 
-  max-width: 1920px;
+  /* max-width: 1920px; */
 
   background-color: var(--main-text-color);
 }
 
+@media screen and (max-width: 1319px) {
+  .footer {
+    text-align: center;
+  }
+}
+
 .footer .wrapper-footer {
-  padding-bottom: 40px;
   display: flex;
 }
 
-.wrapper-item + .wrapper-item {
+@media screen and (max-width: 1319px) {
+  .footer .wrapper-footer {
+    flex-direction: column;
+  }
+}
+
+.wrapper-item.logo {
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 1319px) {
+  .wrapper-item.category {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1319px) {
+  .wrapper-item.informaion {
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (max-width: 1319px) {
+  .wrapper-item.clients {
+    margin-bottom: 40px;
+  }
+}
+
+/* .wrapper-item + .wrapper-item {
   margin-left: 75px;
 }
 
@@ -1698,26 +1735,40 @@ img {
 
 .wrapper-item:nth-child(3) {
   max-width: 108px;
-}
+} */
 
-/* .wrapper-item:last-child {
-    max-width: 240px;
+/* .wrapper-item:nth-child(1) {
+  background-color: yellow;
+}
+.wrapper-item:nth-child(2) {
+  background-color: red;
+}
+.wrapper-item:nth-child(3) {
+  background-color: blue;
+}
+.wrapper-item:nth-child(4) {
+  background-color: pink;
+}
+.wrapper-item:nth-child(5) {
+  background-color: brown;
+}
+.wrapper-item:nth-child(6) {
+  background-color: green;
+}
+.wrapper-item:nth-child(7) {
+  background-color: orange;
 } */
 
 .wrapper-item > .link-logo {
-  margin-bottom: 40px;
   width: 250px;
   height: 50px;
+
   display: block;
 }
 
 .link-logo > .icon-footer {
   width: 100%;
   height: 100%;
-}
-
-.wrapper-item .item-footer:not(:last-child) {
-  margin-bottom: 10px;
 }
 
 .footer-text {
@@ -1748,7 +1799,7 @@ img {
   margin-bottom: 40px;
 }
 
-.wrapper-item .link-social {
+.link-social {
   display: block;
   width: 40px;
   height: 40px;
@@ -1821,19 +1872,43 @@ img {
 }
 
 .footer-title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  font-size: 20px;
-  /* font-weight: 600; */
-  /* line-height: 1.4; */
+  padding-top: 11px;
+  padding-bottom: 11px;
 
+  font-size: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
+  transform: translate(-35px);
+  width: 480px;
+
+  background-color: #1a1a1a;
   color: var(--white-text-color);
+}
+
+.footer-title.category {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1320px) {
+  .footer-title {
+    margin-bottom: 10px;
+  }
+}
+
+.list-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .footer-link {
   font-size: 17px;
   font-weight: 400;
-  line-height: 1.41;
+  line-height: calc(24 / 17);
 
   color: var(--primary-bg-color);
 
@@ -1843,6 +1918,18 @@ img {
 .footer-link:hover,
 .footer-link:focus {
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 1319px) {
+  .wrapper-footer .list-information {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1319px) {
+  .wrapper-footer .list-clients {
+    display: none;
+  }
 }
 
 /* ADDRESS */
